<resources>
    <string name="app_name">یادآور</string>

    <string name="no_task_found">هیچ یادآوری‌ای پیدا نشد!</string>
    <string name="deleted">حذف شد!</string>\

    <string-array name="months">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>آذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </string-array>

    <string name="tasks">یادآوری‌ها</string>
    <string name="title">عنوان</string>
    <string name="date">تاریخ</string>
    <string name="occasion">مناسبت</string>
    <string name="description">توضیحات</string>
    <string name="location">مکان</string>
    <string name="link">لینک</string>
    <string name="save">ذخیره</string>
    <string name="saved">ذخیره شد!</string>

    <string name="add_task">افزودن یادآوری</string>
    <string name="short_title">عنوان باید حداقل شامل %d حرف باشد!</string>
    <string name="long_title">طول عنوان نباید بیشتر از %d حرف باشد!</string>
    <string name="empty_due_date">تاریخ شروع نمی‌تواند خالی باشد!</string>

    <string name="something_went_wrong">خطایی رخ داد!</string>
    <string name="today">امروز</string>
    <string name="time">زمان</string>
    <string name="cancel">انصراف</string>
    <string name="ok">باشه</string>
    <string name="tomorrow">فردا</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>

    <string name="primary_channel">کانال اصلی</string>
    <string name="alarm_at">یادآوری در %s</string>
    <string name="primary_channel_description">نوتیفیکیشن‌های این کانال مربوط به یادآوری یادآورهای تنظیم‌شده می‌باشد.</string>

    <string name="task_details_fragment_label">جزئیات یادآوری</string>
    <string name="start_date">تاریخ شروع</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>
    <string name="share">اشتراک گذاری</string>
    <string name="edit_task">ویرایش یادآوری</string>

    <string name="delete_task">حذف یادآور</string>
    <string name="are_you_sure">آیا مطمئنید؟</string>
    <string name="no_internet">خطا در اتصال به اینترنت!</string>
    <string name="extra_share_text">دریافت یادآوری از بادصبا\nیادآوری «%s» با شما به اشتراک گذاشته شده است، برای دیدن جزئیات یادآوری و ذخیره آن در بادصبا، بر روی لینک زیر کلیک کنید.\n%s</string>

    <string-array name="occasions">
        <item>تولد</item>
        <item>قسط</item>
        <item>سالگرد</item>
        <item>جلسه</item>
        <item>خمس</item>
        <item>دارو</item>
    </string-array>

    <string-array name="week_days">
        <item>یکشنبه</item>
        <item>دوشنبه</item>
        <item>سه‌شنبه</item>
        <item>چهارشنبه</item>
        <item>پنجشنبه</item>
        <item>جمعه</item>
        <item>شنبه</item>
    </string-array>

    <string name="icon_calendar_day">&#xf783;</string>
    <string name="icon_palette">&#xf53f;</string>
    <string name="icon_circle_plus">&#xf055;</string>
    <string name="icon_gift">&#xf06b;</string>
    <string name="icon_calendar_minus">&#xf272;</string>
    <string name="icon_align_right">&#xf038;</string>
    <string name="icon_circle_xmark">&#xf057;</string>
    <string name="icon_link_simple">&#xe1cd;</string>
    <string name="icon_flag">&#xf024;</string>
    <string name="icon_memo">&#xe1d8;</string>
    <string name="icon_share_nodes">&#xf1e0;</string>
    <string name="icon_trash_can">&#xf2ed;</string>
    <string name="icon_pen">&#xf304;</string>

</resources>