<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.mobiliha.eventsbadesaba.util.TimeUtils"/>
        <import type="com.mobiliha.eventsbadesaba.util.Utils"/>
        <import type="com.mobiliha.eventsbadesaba.data.local.db.entity.TaskColor"/>
        <variable
            name="viewModel"
            type="com.mobiliha.eventsbadesaba.ui.modify.ModifyViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.modify.ModifyFragment"
                android:paddingTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="12dp"
                android:orientation="vertical">

                <com.mobiliha.eventsbadesaba.ui.custom.CustomEditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:customEditTextTextHintText="@string/title"
                    app:customEditTextText="@={viewModel.title}"
                    app:customEditTextIcon="@string/icon_align_right"
                    android:layout_marginBottom="@dimen/distance_between_modify_fragment_items"/>

                <com.mobiliha.eventsbadesaba.ui.custom.CustomDateTimeView
                    android:id="@+id/txt_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:customDateTimeDate="@{TimeUtils.parsePersianDate(viewModel.date)}"
                    app:customDateTimeTime="@{TimeUtils.extractTime(viewModel.time)}"
                    app:customDateTimeIcon="@string/icon_calendar_day"
                    android:layout_marginBottom="@dimen/distance_between_modify_fragment_items"/>

                <com.mobiliha.eventsbadesaba.ui.custom.CustomTextView
                    android:id="@+id/txt_occasion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:customHintText="@string/occasion"
                    app:customText="@{Utils.toLocaleString(viewModel.occasion)}"
                    app:customIcon="@string/icon_gift"
                    android:layout_marginBottom="@dimen/distance_between_modify_fragment_items"/>

                <com.mobiliha.eventsbadesaba.ui.custom.CustomEditText
                    android:id="@+id/edt_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:customEditTextTextHintText="@string/description"
                    app:customEditTextText="@={viewModel.desc}"
                    app:customEditTextIcon="@string/icon_memo"
                    android:layout_marginBottom="@dimen/distance_between_modify_fragment_items"/>

                <com.mobiliha.eventsbadesaba.ui.custom.CustomEditText
                    android:id="@+id/edt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:customEditTextTextHintText="@string/location"
                    app:customEditTextText="@={viewModel.location}"
                    app:customEditTextIcon="@string/icon_flag"
                    android:layout_marginBottom="@dimen/distance_between_modify_fragment_items"/>

                <com.mobiliha.eventsbadesaba.ui.custom.CustomEditText
                    android:id="@+id/edt_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:customEditTextTextHintText="@string/link"
                    app:customEditTextText="@={viewModel.link}"
                    app:customEditTextIcon="@string/icon_link_simple"
                    android:layout_marginBottom="@dimen/distance_between_modify_fragment_items"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginBottom="@dimen/distance_between_modify_fragment_items">

                    <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="@string/icon_palette"
                        android:gravity="center"/>

                    <com.mobiliha.eventsbadesaba.ui.custom.ColoredCircle
                        android:id="@+id/blue_circle"
                        app:circleColor="@{TaskColor.BLUE.colorCode}"
                        app:circleChosen="@{viewModel.color.colorCode == TaskColor.BLUE.colorCode}"
                        style="@style/ColoredCircleStyle"/>

                    <com.mobiliha.eventsbadesaba.ui.custom.ColoredCircle
                        android:id="@+id/yellow_circle"
                        app:circleColor="@{TaskColor.YELLOW.colorCode}"
                        app:circleChosen="@{viewModel.color.colorCode == TaskColor.YELLOW.colorCode}"
                        style="@style/ColoredCircleStyle"/>

                    <com.mobiliha.eventsbadesaba.ui.custom.ColoredCircle
                        android:id="@+id/green_circle"
                        app:circleColor="@{TaskColor.GREEN.colorCode}"
                        app:circleChosen="@{viewModel.color.colorCode == TaskColor.GREEN.colorCode}"
                        style="@style/ColoredCircleStyle"/>

                    <com.mobiliha.eventsbadesaba.ui.custom.ColoredCircle
                        android:id="@+id/red_circle"
                        app:circleColor="@{TaskColor.RED.colorCode}"
                        app:circleChosen="@{viewModel.color.colorCode == TaskColor.RED.colorCode}"
                        style="@style/ColoredCircleStyle"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_margin="4dp"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_margin="4dp"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>
</layout>