<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.mobiliha.eventsbadesaba.util.TimeUtils"/>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.mobiliha.eventsbadesaba.ui.details.TaskDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.details.TaskDetailsFragment"
                android:orientation="vertical"
                android:padding="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="24dp">

                    <com.mobiliha.eventsbadesaba.ui.custom.ColoredLabel
                        android:layout_width="6dp"
                        android:layout_height="32dp"
                        app:labelColor="@{viewModel.task.color.colorCode}"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:text="@{viewModel.task.title}"
                        tools:text="تولد"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/TaskDetailsRowContainerStyle">

                    <LinearLayout
                        style="@style/TaskDetailsKeyContainerStyle">

                        <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                            style="@style/TaskDetailsIconStyle"
                            android:text="@string/icon_calendar_day"/>

                        <TextView
                            style="@style/TaskDetailsKeyStyle"
                            android:text="@string/start_date"/>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/TaskDetailsValueContainerStyle">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TaskDetailsValueStyle"
                            android:text="@{TimeUtils.parsePersianDate(viewModel.task.dueDate)}"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TaskDetailsValueStyle"
                            android:layout_marginRight="16dp"
                            android:text="@{TimeUtils.extractTime(viewModel.task.dueDate)}"/>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:visibility="@{viewModel.task.occasion == null ? View.GONE : View.VISIBLE}"
                    style="@style/TaskDetailsRowContainerStyle">

                    <LinearLayout
                        style="@style/TaskDetailsKeyContainerStyle">

                        <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                            style="@style/TaskDetailsIconStyle"
                            android:text="@string/icon_calendar_minus"/>

                        <TextView
                            style="@style/TaskDetailsKeyStyle"
                            android:text="@string/occasion"/>

                    </LinearLayout>

                    <TextView
                        style="@style/TaskDetailsValueStyle"
                        android:text="@{viewModel.taskOccasion}"/>

                </LinearLayout>

                <LinearLayout
                    android:visibility="@{viewModel.task.details == null ? View.GONE : View.VISIBLE}"
                    style="@style/TaskDetailsRowContainerStyle">

                    <LinearLayout
                        style="@style/TaskDetailsKeyContainerStyle">

                        <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                            style="@style/TaskDetailsIconStyle"
                            android:text="@string/icon_memo"/>

                        <TextView
                            style="@style/TaskDetailsKeyStyle"
                            android:text="@string/description"/>

                    </LinearLayout>

                    <TextView
                        style="@style/TaskDetailsValueStyle"
                        android:text="@{viewModel.task.details}"/>

                </LinearLayout>

                <LinearLayout
                    android:visibility="@{viewModel.task.location == null ? View.GONE : View.VISIBLE}"
                    style="@style/TaskDetailsRowContainerStyle">

                    <LinearLayout
                        style="@style/TaskDetailsKeyContainerStyle">

                        <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                            style="@style/TaskDetailsIconStyle"
                            android:text="@string/icon_flag"/>

                        <TextView
                            style="@style/TaskDetailsKeyStyle"
                            android:text="@string/location"/>

                    </LinearLayout>

                    <TextView
                        style="@style/TaskDetailsValueStyle"
                        android:text="@{viewModel.task.location}"/>

                </LinearLayout>

                <LinearLayout
                    android:visibility="@{viewModel.task.link == null ? View.GONE : View.VISIBLE}"
                    style="@style/TaskDetailsRowContainerStyle">

                    <LinearLayout
                        style="@style/TaskDetailsKeyContainerStyle">

                        <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                            style="@style/TaskDetailsIconStyle"
                            android:text="@string/icon_link_simple"/>

                        <TextView
                            style="@style/TaskDetailsKeyStyle"
                            android:text="@string/link"/>

                    </LinearLayout>

                    <TextView
                        style="@style/TaskDetailsValueStyle"
                        android:text="@{viewModel.task.link}"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:onClick="@{() -> viewModel.navigateToModify()}"
                style="@style/TaskDetailsActionContainerStyle">
                <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                    style="@style/TaskDetailsActionIconStyle"
                    android:text="@string/icon_pen"/>
                <TextView
                    style="@style/TaskDetailsActionStyle"
                    android:text="@string/edit"/>
            </LinearLayout>

            <LinearLayout
                android:onClick="@{() -> viewModel.confirmTaskDeletion()}"
                style="@style/TaskDetailsActionContainerStyle">
                <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                    style="@style/TaskDetailsActionIconStyle"
                    android:text="@string/icon_trash_can"/>
                <TextView
                    style="@style/TaskDetailsActionStyle"
                    android:text="@string/delete"/>
            </LinearLayout>

            <LinearLayout
                android:onClick="@{() -> viewModel.shareTask()}"
                style="@style/TaskDetailsActionContainerStyle">
                <com.mobiliha.eventsbadesaba.ui.custom.FontIcon
                    style="@style/TaskDetailsActionIconStyle"
                    android:text="@string/icon_share_nodes"/>
                <TextView
                    style="@style/TaskDetailsActionStyle"
                    android:text="@string/share"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>